# med-guard-RAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  FINDINGS.md  pyproject.toml
app/: config.py  llm.py  main.py  rag.py  retrieval.py
app/ingestion/: bm25_index.py  chunk.py  clean.py  embed.py  fetch.py  index.py  run.py
scripts/: ask.py  check_index.py
tests/: test_health.py
